# BinderDiffuser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  README.md
examples/pdl1_binder/: README.md  config.yaml
figures/: README.md  sample_designs.csv
notebooks/: 01_pdl1_walkthrough.ipynb  02_colab_run.ipynb
src/binderdiffuser/: __init__.py  cli.py  config.py  pipeline.py  targets.py  viz.py
src/binderdiffuser/diffusion/: __init__.py  motif_spec.py  rfdiff_wrapper.py
src/binderdiffuser/sequence/: __init__.py  mpnn_runner.py
src/binderdiffuser/validation/: __init__.py  alphafold_runner.py  filters.py  metrics.py
tests/: conftest.py  test_filters.py  test_metrics.py  test_motif_spec.py  test_targets.py
