[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binderdiffuser"
version = "0.1.0"
description = "De novo protein binder design pipeline (motif-scaffolded RFdiffusion + ProteinMPNN + AlphaFold2 validation)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Harshit Ghosh", email = "harshitghosh@gmail.com" }]
keywords = [
    "protein-design",
    "diffusion-models",
    "rfdiffusion",
    "alphafold",
    "proteinmpnn",
    "bioinformatics",
    "structural-biology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "biopython>=1.83",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "py3Dmol>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]

[project.scripts]
binderdiffuser = "binderdiffuser.cli:main"

[project.urls]
Homepage = "https://github.com/deepmind11/BinderDiffuser"
Issues = "https://github.com/deepmind11/BinderDiffuser/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
