[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binderdiffuser"
version = "0.1.0"
description = "De novo protein binder design pipeline (motif-scaffolded RFdiffusion + ProteinMPNN + AlphaFold2 validation)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Harshit Ghosh", email = "harshitghosh@gmail.com" }]
keywords = [
    "protein-design",
    "diffusion-models",
    "rfdiffusion",
    "alphafold",
    "proteinmpnn",
    "bioinformatics",
    "structural-biology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "biopython>=1.83",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "py3Dmol>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]

[project.scripts]
binderdiffuser = "binderdiffuser.cli:main"

[project.urls]
Homepage = "https://github.com/deepmind11/BinderDiffuser"
Issues = "https://github.com/deepmind11/BinderDiffuser/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
# RUF002: Greek letters in docstrings are intentional scientific notation
#         (Cα, β, etc.); flagging them as ambiguous is wrong for this domain.
# RUF043: pytest.raises(match=...) accepts regex metacharacters; no need to
#         force raw strings throughout the test suite.
# N806:   single-letter math identifiers (L, T, etc.) are idiomatic in
#         structural-biology code that mirrors paper notation.
ignore = ["E501", "RUF002", "RUF043", "N806"]

[tool.ruff.lint.per-file-ignores]
# diffuser_T mirrors RFdiffusion's Hydra config field `diffuser.T`; renaming
# to lowercase would diverge from upstream config keys, so allow mixedCase
# in the two files that touch it.
"src/binderdiffuser/config.py" = ["N815"]
"src/binderdiffuser/diffusion/rfdiff_wrapper.py" = ["N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
